# RayTraceInOneWeekend-Haskell

./: Camera.hs  Hitable.hs  HitableList.hs  Material.hs  README.md  Ray.hs  Scene.hs  Sphere.hs  Vect3.hs  main  main.hs  out.ppm  package.yaml  raytrace.cabal  stack.yaml  test.json
.stack-work/ghci/7a2d4549/: cabal_macros.h
.stack-work/ghci/8a8894fc/: cabal_macros.h
.stack-work/ghci/d68af783/: cabal_macros.h
.stack-work/install/x86_64-osx/lts-12.10/8.4.3/flag-cache/: MonadRandom-0.5.1.1-9Knb0gktRCLCbgda8IHmqo  async-2.2.1-7DQr5PBcpiwJNOuf7ZiSPa  base-prelude-1.3-6USA4MwBClb3KaEhnb0gD7  brittany-0.11.0.0-3bmfIy2mRAI2lfIezfCp4p  butcher-1.3.1.1-KkpI0ow5pABC0xEgYQjnlL  case-insensitive-1.2.0.11-LO6zJz9aRiEEtPUvQyaZDw  clock-0.7.2-Cf9UTsaN2AjEpBnoMpmgkU  cmdargs-0.10.20-F07nW8QLYyL7Sb2sj6I5zi  conduit-1.3.0.3-8Y7sfmWiTeNBwHOK5PlqO7  cpphs-1.20.8-KvqJc32txJLH1Pcj2muqBd  czipwith-1.0.1.0-AmgzhBMPFrQGUOeGtt1cy1  data-default-0.7.1.1-HjQKn6Xjs875aCLGpDUtkz  data-default-class-0.1.2.0-2kYzERBLX3wJoPfj7mwVvW  data-default-instances-containers-0.0.1-BuLOOThEVehE0VYHwYVlvi  data-default-instances-dlist-0.0.1-55YIA8HllzdGvR9lg412ym  data-default-instances-old-locale-0.0.1-JZDXO6iGViiIeqGG9yoh9C  data-tree-print-0.1.0.1-Iy90sSl9njzE7Ctu5XadG6  deque-0.2.1-4bd2iTzHMD59d7YtYE1NdD  extra-1.6.9-8Ceeh3F4b193EiQlF5wOf3  file-embed-0.0.10.1-JBj0CTa3b3pL2aTV19QFZK  ghc-events-0.8.0.2-2vpZ43GcJUu4N5MGHzqEWT  ghc-exactprint-0.5.6.1-HrKocbi5JgtD3776bTHdf7  ghc-paths-0.1.0.9-BTJEJFO7ixU1hUjA8BfQ4h  (+33 more)
app/: main.hs
src/: Camera.hs  Hitable.hs  HitableList.hs  Ray.hs  Scene.hs  Vect3.hs
(+86 files in other folders)
