cabal-version: 1.12

name:           raytrace
version:        0.3.0
--description:    
homepage:       https://github.com/PlanarGraph/RayTraceInOneWeekend-Haskell#readme
bug-reports:    https://github.com/PlanarGraph/RayTraceInOneWeekend-Haskell/issues
author:         Nolan Tiffney
maintainer:     nolantiffney@gmail.com
copyright:      2019 Nolan Tiffney
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    --ChangeLog.md

source-repository head
  type: git
  location: https://github.com/PlanarGraph/RayTraceInOneWeekend-Haskell

library
  exposed-modules:
      Camera
    , Hitable
    , HitableList
    , Ray
    , Scene
    , Vect3
  hs-source-dirs:
      src
  build-depends:
      random
    , bytestring
    , transformers
    , parallel
    , aeson
    , text
    , raw-strings-qq
    , base >=4.7 && <5
  default-language: Haskell2010

executable raytrace
  main-is: main.hs
  --other-modules:
  --    Paths_rt
  hs-source-dirs:
      app
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      bytestring
    , transformers
    , aeson
    , base >=4.7 && <5
    , raytrace
  default-language: Haskell2010

--test-suite rt-test
--  type: exitcode-stdio-1.0
--  main-is: Spec.hs
--  other-modules:
--      Paths_rt
--  hs-source-dirs:
--      test
--  ghc-options: -threaded -rtsopts -with-rtsopts=-N
--  build-depends:
--      base >=4.7 && <5
--    , rt
--  default-language: Haskell2010
